--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@uiw/react-md-editor": "^1.12.2",
     "katex": "^0.11.1",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0"
   },
   "devDependencies": {
